fixed some misaligned elements

--- a/dev-portfolio/src/components/About/About.css
+++ b/dev-portfolio/src/components/About/About.css
@@ -14,7 +14,7 @@ div {
   width: fit-content;
   height: fit-content;
   position: relative;
-  top: 8rem;
-  left: 4rem;
+  top: 22vh;
+  left: 5vw;
   padding: .5rem;
 }
