--- a/dev-portfolio/src/components/Portfolio/Portfolio.css
+++ b/dev-portfolio/src/components/Portfolio/Portfolio.css
@@ -5,7 +5,8 @@ div {
 
 #containerp{
   position: relative;
-  top: 4rem;
+  top: 11vh;
+  height: 365vh;
   width: fit-content;
   padding-bottom: .5rem;
   padding-top: .5rem;
